adding additional servers